messing with styles and logo

--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="fr">
+<!-- <html lang="fr" class=""> -->
+<html lang="fr" class="dark">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
